# xqt5-ai-plattform

./: TODO.md
backend/: Dockerfile  pyproject.toml
backend/app/: admin.py  audit.py  documents.py  image_gen.py  image_storage.py  llm.py  main.py  models.py  pool_chats.py  pools.py  providers.py  rag.py  storage.py
backend/xqt5_ai_plattform_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: ADMIN-DOKUMENT.md  ANWENDER-DOKUMENT.md  ANWENDER-QUICKSTART.md  BEST-PRACTICES-DRAFT.md  BUG-AUDIT-2026-05-13.md  BUG-FIX-PLAYBOOK.md  CODING-DOKUMENT.md  ERLEDIGT.md  FEATURE-DOKUMENT.md  FULLSTACK-BEST-PRACTICES.md  IMPLEMENTIERT.md  PHASE3-MATRIX-SHELVED.md  PROD-UPGRADE-PLAYBOOK.md  SECURITY.md  SERVICEMELDUNGEN-PLAN-SHELVED.md  TODO.md  UMSETZUNGS-DOKUMENT.md
frontend/: index.html
frontend/dev-tools/: icon-preview.html
frontend/src/: App.jsx  api.js  main.jsx  styles.css
frontend/src/components/: AdminDashboard.jsx  AssistantManager.jsx  Bilder.jsx  ChatArea.jsx  ConfirmDialog.jsx  CreatePoolDialog.jsx  DocumentList.jsx  FileUpload.jsx  Icon.jsx  LoginScreen.jsx  MessageBubble.jsx  MessageInput.jsx  Modal.jsx  NavRail.jsx  PoolChatArea.jsx  PoolChatList.jsx  PoolDetail.jsx  PoolDocuments.jsx  PoolHeader.jsx  PoolList.jsx  PoolMembers.jsx  PoolOverview.jsx  PoolShareDialog.jsx  Sidebar.jsx  TemplateManager.jsx  Welcome.jsx
frontend/src/i18n/: strings.js
scripts/: build_corpus.py
supabase/migrations/: 20260512_pool_chat_messages_created_idx.sql  20260513_a_image_generation.sql  20260513_b_widen_source_check.sql
(+23 files in other folders)
