[project]
name = "xqt5-ai-plattform-backend"
version = "0.1.0"
description = "FastAPI backend for a Coolify-deployed AI hub"
requires-python = ">=3.11"
# Upper bounds on the three majors (fastapi / pydantic / supabase) guard
# against an accidental breaking-major upgrade the next time uv.lock is
# regenerated. bcrypt is pinned to 4.0.1 per the project-wide rule
# (passlib breaks on bcrypt >= 4.1; the rule applies even though this
# project does not currently use passlib, to keep the codebase consistent).
dependencies = [
  "fastapi>=0.115.0,<1.0",
  "uvicorn[standard]>=0.32.0",
  "python-dotenv>=1.0.0",
  "httpx>=0.27.0",
  "pydantic>=2.9.0,<3.0",
  "python-multipart>=0.0.6",
  "cryptography>=41.0.0",
  "python-jose[cryptography]>=3.3.0",
  "bcrypt==4.0.1",
  "slowapi>=0.1.9",
  "redis>=5.0.0",
  "supabase>=2.0.0,<3.0",
  "pypdf>=4.0.0",
  "tiktoken>=0.7.0",
  "Pillow>=10.0.0",
  "imagehash>=4.3.1",
  "python-docx>=1.1.0",
  "openpyxl>=3.1.0",
  "xlrd>=1.2,<2.0"
]

[project.optional-dependencies]
corpus = ["reportlab>=4.0", "xlwt>=1.3.0"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
